final reworks